# hypercandle

./: .gitignore  CHAT_SUMMARY.md  Cargo.toml  LICENSE  README.md  TRACKING.md  debug  release
data/: btc-perp-1h-20250801.csv  btc-perp-1h-20250801.json  btc-spot-1h-20250801.csv  btc-spot-1h-20250801.json
data/candles/perp/BTC/1h/: 20250726.csv  20250731.csv  20250801.csv  20250802.csv  20250803.csv
data/candles/perp/BTC/1m/: 20250322.csv  20250323.csv  20250324.csv  20250325.csv  20250326.csv  20250327.csv  20250328.csv  20250329.csv  20250330.csv  20250331.csv  20250401.csv  20250402.csv  20250403.csv  20250404.csv  20250405.csv  20250406.csv  20250407.csv  20250408.csv  20250409.csv  20250410.csv  20250411.csv  20250412.csv  20250413.csv  20250414.csv  20250415.csv  20250416.csv  20250417.csv  20250418.csv  20250419.csv  20250420.csv  20250421.csv  20250422.csv  20250423.csv  20250424.csv  20250425.csv  20250426.csv  20250427.csv  20250428.csv  20250429.csv  20250430.csv  (+344 more)
data/candles/perp/BTC/5m/: 20250726.csv  20250727.csv  20250728.csv  20250731.csv  20250801.csv  20250802.csv
data/candles/perp/ETH/1m/: 20250322.csv  20250323.csv  20250324.csv  20250325.csv  20250326.csv  20250327.csv  20250328.csv  20250329.csv  (+376 more)
data/consolidated/perp/BTC/: 1d.csv  1h.csv  30m.csv
data/consolidated/perp/ETH/: 1d.csv  1h.csv  30m.csv
data/consolidated/spot/BTCUSDC/: 1d.csv  1h.csv  30m.csv
data/consolidated/spot/ETHUSDC/: 1d.csv  1h.csv  30m.csv
src/: cache.rs  candle.rs  fetcher.rs  lib.rs  main.rs  parser.rs  spot.rs
tests/: integration_test.rs
tests/fixtures/20250801/: 0.lz4
(+3825 files in other folders)
