[package]
name = "hl-candles"
version = "0.1.0"
edition = "2021"
description = "Fetch and build BTC candle data from Hyperliquid's historical S3 data"

[lib]
name = "hl_candles"
path = "src/lib.rs"

[[bin]]
name = "hl-candles"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-smithy-types = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lz4 = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
